--- a/index.html
+++ b/index.html
@@ -2,56 +2,60 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
+	<title>Welcome to DULL</title>
 </head>
-
 <body>
-<h1> MY NAME: ABE HOLOZ</h1>
-<img src='img1.jpg' alt= "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.">
-<br>
-<h2> BioGraphical Information</h2>
-<article>
-  <p>
-      I am a Professional Data Scientist (PDS) which means Passion, Developed and Successful (PDS). This is how I can describe myself in the data science field. I am a graduated student from Cleveland State University majoring in data science.
-  </p>
-</article>
-<article>
-  <p>
-      As a data scientist, modelling and predicting are the main task to solve any provided data. Analytical thinking, wide searching capability, strong communication skills and teamwork are all an essential and complementary skills that pushes me to achieve my ultimate goal for a leadirty in data science field.
+<style>
+h1{
+	background-color: black;
+  color: white;
+  text-align: center;
+  font-size: 40px;
+}
+h3{
+  color: red;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+h2{
+  color: rgb(44, 158, 21);
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;}
 
-  </p>
-  <h2>Social Media</h2>
-</article>
-<a href="https://www.facebook.com/abood.k.holozadah"> Facebook</a>
-<br>
-<a href="https://twitter.com/abdallahnation?lang=en"> Twitter</a>
-<br>
-<br>
-<article>
-<table frame="box" border="1">
-  <tr>
-  <th>movies</th>
-  <th>songs</th>
-  <th>books</th>
-</tr>
-<tr>
-  <td>solo</td>
-  <td>gi</td>
-  <td>fcol book</td>
-</tr>
-<tr>
-    <td>movies 2</td>
-    <td>songs 2</td>
-    <td>book 2</td>
-  </tr>
-  <tr>
-      <td>movies 3</td>
-      <td>sogs 3</td>
-      <td>book 3</td>
-    </tr>
-</table>
-</article>
+.shadow{
+	box-shadow: 10px 10px grey
+}
+
+section{
+	background-color: rgb(154, 154, 196);
+}
+
+.p_one{
+	font-size: 20px;
+}
+.p_two{
+	font-size: 20px;
+}
+ul{border-style: ridge;}
+</style>
+<h1>Welcome to DULL Corp</h1>
+<h3>We put DULL in DULL</h3>
+
+<img class= shadow src="http://lorempixel.com/output/city-q-g-400-300-3.jpg">
+
+<section>
+	<p class= p_one>Perhaps far exposed age effects. Now distrusts you her delivered applauded affection out sincerity. As tolerably recommend shameless unfeeling he objection consisted. She although cheerful perceive screened throwing met not eat distance. Viewing hastily or written dearest elderly up weather it as. So direction so sweetness or extremity at daughters. Provided put unpacked now but bringing.</p>
+
+	<h2>Our Core Principles</h2>
+	<ul>
+		<li>Be the greatest provider of grey blandness in the world</li>
+		<li>Put as many people to sleep as possible just by talking</li>
+		<li>Have our customers compare us to rocks</li>
+	</ul>
+
+	<p class= p_two>No opinions answered oh felicity is resolved hastened. Produced it friendly my if opinions humoured. Enjoy is wrong folly no taken. It sufficient instrument insipidity simplicity at interested. Law pleasure attended differed mrs fat and formerly. Merely thrown garret her law danger him son better excuse. Effect extent narrow in up chatty. Small are his chief offer happy had.</p>
+</section>
+
 
 </body>
-
 </html>
