--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Targeted CSS</title>
-  <link rel="stylesheet" type"test/css" href="test.css">
+  <title>Aimed Positioning</title>
+  <link rel="stylesheet_1" type"pos/css" href="pos.css">
 </head>
-
 <body>
 
-<h1 class= blue>MAKE ME BLUE</h1>
-
-<h1 class= purple_1>MAKE ME PURPLE</h1>
-<h1 class= purple_2>MAKE ME PURPLE</h1>
-
-<h1 class= red>MAKE ME RED</h1>
+<!-- Use CSS to place these in their respective locations -->
+<!-- Feel free to change the order of the elements -->
+<h1>Center of the Page</h1>
+<h2>Just under header 1</h2>
+<h3>Top left of the page</h3>
+<h4>Bottom right of the page</h4>
+<h5>Center left of the page</h5>
 
 </body>
 </html>
