--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Aimed Positioning</title>
-  <link rel="stylesheet_1" type"pos/css" href="pos.css">
+  <link rel="stylesheet" href="pos.css">
 </head>
 <body>
 
